# waifu2x_native

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
lib/: main.dart
lib/core/: model_config.dart  task_pool.dart
lib/native/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/native/api/: api.dart  api.freezed.dart  utils.dart
lib/widget/: select_file_dialog.dart  side_panel.dart  tiled_renderer.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  image_process.rs  inference.rs  lib.rs  seam_blending.rs  texture.rs
rust/src/api/: api.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_waifu2x_native.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_waifu2x_native.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
