[package]
name = "rust_lib_waifu2x_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.5.0" }
image = { version = "0.25.2", features = [ "png" ]}
ort = { version = "2.0.0-rc.7", features = [ "cuda", "tensorrt" ] }
ndarray = { version = "0.16.1"}
lazy_static = { version = "1.5.0"}
dlopen = { version = "0.1.8"}
